# agentcanary

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
src/agentcanary/: __init__.py  chat.py  config.py  llm.py  main.py  security.py
src/agentcanary/memory/: store.py
src/agentcanary/tools/: agent.py  binary.py  discovery.py  mcp.py  multiturn.py  recon.py  registry.py  supply.py  universal.py
