[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcanary"
version = "0.1.0"
description = "Autonomous AI Agent penetration testing — the first Agent-vs-Agent red teaming tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
canary = "agentcanary.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcanary"]
